# basic-api-auth

./: .env.production  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1b85d1a4aef8_remove_unit.py  42eca666db4d_initial.py
src/api/: api.py  deps.py
src/api/v1/routers/: auth_api.py  user_api.py
src/crud/models/: user.py
src/crud/repository/: base_repository.py  user_repository.py
src/crud/schemas/: base_schema.py
src/crud/schemas/user/: auth_schema.py  profile_schema.py  user_schema.py
src/infra/: container.py  settings.py
src/infra/auth/: security.py
src/infra/commons/: exceptions.py
src/services/user/: auth_service.py  base_services.py  user_services.py
src/utils/: schema.py
